deploy/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels: # all Pods that match this label (other labels are allowed) belong to this deployment
      app: mongodb
  template: # configuration for Pod
    metadata:
      labels: # matches this deployment's label so this Pod will be related to this deployment
        app: mongodb
    spec:
      containers: # you can have multiple containers in a Pod
        - name: mongodb
          image: mongo:6.0.3
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service # matches the mongodb-url in mongodb-config.yaml
spec:
  selector:
    app: mongodb # should match the label of a Pod
  ports:
    - protocol: TCP
      port: 27017 # service port
      targetPort: 27017 # should match the container port
