deploy/mongo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
    - host: spring-boot-mongo.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-boot-mongo-service
                port:
                  number: 8080
